@@ -71,7 +71,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * The 'BeforeWatchlist' hook has been removed due to internal changes in
   Special:Watchlist. 'SpecialWatchlistQuery' should now be used by extensions
   to customize the watchlist database query.
-
+* Added $wgNewPasswordExpiry, to specify an expiry time (in seconds) to
+  tempoary passwords
 
 === Migrated extensions ===
 The following extensions are migrated into MediaWiki 1.14:
@@ -257,6 +258,7 @@ The following extensions are migrated into MediaWiki 1.14:
   move log
 * Image moving is now enabled for sysops by default
 * Make "Did you mean" search feature more noticeable
+* (bug 2242) Add an expiry time to temporary passwords
 * (bug 16720) Transcluded Special:NewPages processes "/username="
 * Added "Advanced search" link to the search form
 * Special:Upload can now have a custom upload message instead of uploadtext by
